--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -205,7 +205,7 @@ width: 2em;
     .x-container{
         display: flex;
         padding-bottom: 1rem;
-        justify-content: end;
+        justify-content: flex-end;
     }
     .x{
         font-size: 2.5rem;
