--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -22,8 +22,8 @@
                     <div class="drop-container">
                         <div class="dropdown-content-a">
                             <a routerLink="/education">Education</a>
-                            <a routerLink="/about-us/vision">Video walls</a>
-                            <a routerLink="/about-us/team">Unified communications</a>
+                            <!-- <a routerLink="/about-us/vision">Video walls</a> -->
+                            <a routerLink="/unified-communications">Unified communications</a>
                             <a routerLink="/about-us/mission">Meeting solutions</a>
                             <a routerLink="/about-us/vision">Digital signage</a>
                             <a routerLink="/about-us/team">Government projects</a>
