--- a/src/app/modules/solutions/unified/unified.component.html
+++ b/src/app/modules/solutions/unified/unified.component.html
@@ -1,1 +1,345 @@
-<p>unified works!</p>
+<div class="body">
+    <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <h1 class="hero-title pb-3">Unified communications and collaboration.</h1>
+                <p class="hero-p2 header-p pt-2">
+                    Unified communications and collaboration (UCC) means much more than video conferencing. In the hybrid workplace, users connect through voice and phone, presence, video conferencing, messaging, live chat, file sharing, screen sharing, whiteboarding, webinars, and live streaming.
+                </p>
+                <h5 class="hero-p pb-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
+                <a routerLink="" class="demo-button">Find gifts</a>
+            </div>
+            <img src="https://imageio.forbes.com/specials-images/imageserve/656b6b508b02b73b5d547855/Portrait-of-a-businesswoman-using-digital-tablet-in-a-board-room/960x0.jpg?format=jpg&width=960" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="options">
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroArrowDown"></ng-icon>
+                <p>Downloads</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroStar"></ng-icon>
+                <p>Certifications</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroDocumentCheck"></ng-icon>
+                <p>Validated</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroHomeModern"></ng-icon>
+                <p>Training</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroUserGroup"></ng-icon>
+                <p>Community</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroBriefcase"></ng-icon>
+                <p>Careers</p>
+            </div>
+        </a>
+
+    </div>
+    <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">UCC provides frictionless collaboration from anywhere at any time, using any device
+    </p>
+
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Cloud calling and contact centers: Elevate customer experience and employee engagement
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Add cloud calling to your unified communications and contact center platforms to simplify team collaboration, support your mobile workforce, and elevate the customer experience..</p>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+        </div>
+    </div>
+    <div class="partner-section">
+        <h3 class="h2-offers center pt-3 pb-4">We partner with leading collaboration providers
+        </h3>
+        <div class="partner-images pb-9">
+            <div class="container-p-img">
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+                <div class="center pt-7 pb-7">
+                    <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="offers">
+        <h2 class="h2-offers text-center">
+            Proscene's global UCC deployment
+        </h2>
+        <p class="pt-6 p-solutions " style="max-width: min(90% ,800px); margin: 0 auto; text-align: center;">After decades of deploying communications platforms for our customers across the country, Proscene developed a roadmap to successful global UCC deployment
+        </p>
+
+    </div>
+
+    <div class="solutions">
+        <div class="cards-solutions">
+            <div class="card1 card1-1" >
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Interoperability</h5>
+                    <p class="pt-6 width: 90%; padding-block padding-block p-solutions">Today’s workforce wants flexibility and a choice of tools. True interoperability means using any UCC platform and accessing all functions without compromising the end-user experience.</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLink="" class=" width: 90%; padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center padding-block">
+                    <h5 class=" pt-6">Voice integration:</h5>
+                    <p class="pt-6 p-solutions">Enable team and contact center voice communication through UCC platforms with headsets, Teams phones, Webex Calling, Zoom Phones, Google Workspace, or multi-platform headsets and phones.
+                    </p>
+                </div>
+                <div class=" pt-6 pb-6 padding-block center">
+                    <a routerLi nk="" class=" width: 90%;">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">User experience</h5>
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Start the training process early, before you launch new platforms and upgrade meeting rooms. Ensuring that users are comfortable with new technology will boost adoption..</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Licensing</h5>
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Manage licensing and permissions, monitor profiles and shut down inactive accounts.</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Security</h5>
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Manage access to UCC platforms and device access to the cloud and on-prem systems and files. Also, protect end users by ensuring conversations, data, and files are shared securely.</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1 card1-1">
+                <div class="image center "><ng-icon name="heroCubeTransparent" class="icons-1"></ng-icon></div>
+                <div class="words t-center">
+                    <h5 class=" pt-6 width: 90%; padding-block">Management and optimization</h5>
+                    <p class="pt-6 width: 90%; padding-block p-solutions">Ensure access to UCC platforms and provide 24/7 user support. Monitor device, platform, and room usage to optimize your system and user experience continually.</p>
+                </div>
+                <div class=" pt-6 pb-6 center">
+                    <a routerLin k="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <h2 class="h2-offers text-center">
+        Proscene's UCC services and solutions
+    </h2>
+    <div class="solutions">
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imageone"></div>
+                <div class="words">
+                    <h5 class=" pt-6 width: 90%; padding-block">Global UCC Deployment</h5>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Get details ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imagetwo"></div>
+                <div class="words padding-block">
+                    <h5 class=" pt-6">Collaboration as a service</h5>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Explore collaboration ></a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imagethree"></div>
+                <div class="words">
+                    <h5 class=" pt-6 width: 90%; padding-block">User experience services</h5>
+                </div>
+                <div class=" pt-6 pb-6 ">
+                    <a routerLink="" class="padding-block">Dicover more ></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="solutions1">
+        <div class="cards-solutions">
+            <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                <div class="words">
+                    <h5 class=" pt-6 width: 90%; padding-block">Global UCC Deployment</h5>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Webex by Cisco ></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Microsoft teams ></a>
+                </div>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Cisco webex calling ></a>
+                </div>
+                <div class="pb-9"><a routerLink="" class="demo-button">See all partners</a></div>
+               
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
+                <div class="words padding-block">
+                    <h5 class=" pt-6">Shop UCC hardware</h5>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Neat board 4k Multi touch LCD ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Cisco webex board ></a>
+                </div>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Microsoft surcace hub 3 85' ></a>
+                </div>
+                <div class="pb-9"><a routerLink="" class="demo-button">Shop all hardware</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="sub">
+        <h2 class="h2-offers center" style="color: white;">
+            Subscribe to our newsletter
+        </h2>
+    
+    <div class="pt-7 center">
+        
+        <form action="" class="form">
+            <input type="email" name="email" id="" placeholder="Enter your email.">
+            <a routerLink="" class="a-1">Notify</a>
+        </form>
+    </div>
+    </div>
+    
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Latest products and innovations from Proscene
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+                easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
+                to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+        </div>
+    </div>
+    <div class="flex1">
+        
+        <div class="flex1-words wordsm ">
+            <h2 class="h2-offers">
+                Get the 2024 Proscene report
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
+                <a routerLink="" class="demo-button">Read report</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a" style="padding-left: 0;">View trials and demos ></a>
+                </div>
+
+        </div>
+        <div class="images flex1-words-p images-back2">
+            <img src="" alt="" srcset="">
+        </div>
+    </div>
+    <div class="flex1">
+        <div class="images images-back3">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Latest products and innovations from Proscene
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+                easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
+                to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Contact us!
+    </h2>
+        <app-contactform class="pb-9"></app-contactform>
+    <app-footer></app-footer>
+</div>
