--- a/src/app/modules/blog/blog/blog.component.html
+++ b/src/app/modules/blog/blog/blog.component.html
@@ -19,34 +19,17 @@
                 </div>
             </div>
             <div class="flex-3">
-                <div class="card1">
-                    <div class="image1"></div>
-                    <div>
-                        <p class="date pt-2 pb-2">May 22, 2024</p>
-                        <a routeLink="">
-                            <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
-                        </a>
-                    </div>
+                <div *ngFor="let article of blogs" class="card1">
+                    <img src="{{article.img}}" alt="" srcset="" style="height: 70px; aspect-ratio: 10/5;">
+                  <div>
+                      <p class="date pt-2 pb-2">{{ article.time }}</p>
+                      <h3 class="big-card-words-h">{{ article.h2 }}</h3>
+                      <button (click)="openModal(article)">Read More</button>
+                  </div>
                 </div>
-                <div class="card1">
-                    <div class="image1"></div>
-                    <div>
-                        <p class="date pt-2 pb-2">May 22, 2024</p>
-                        <a routeLink="">
-                            <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
-                        </a>
-                    </div>
-                </div>
-                <div class="card1">
-                    <div class="image1"></div>
-                    <div>
-                        <p class="date pt-2 pb-2">May 22, 2024</p>
-                        <a routeLink="">
-                            <h3 class="big-card-words-h ">The race against economic inequality within emerging markets – a case for SMEs</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
+                <app-modalnews *ngIf="isModalOpen" [article]="selectedArticle" (closeEvent)="closeModal()"></app-modalnews>
+              </div>
+              
         </div>
     </div>
     <div class="first">
@@ -71,7 +54,7 @@
       <app-modal *ngIf="isModalOpen" [article]="selectedArticle" (closeEvent)="closeModal()"></app-modal>
 </div>      
 <div class="pt-4 pb-9">
-    <div class="center"><a routerLink="contact-us" class="demo-button">Get started</a></div>
+    <div class="center"><a routerLink="/contact-us" class="demo-button">Get started</a></div>
 </div>
 </main>
 <app-contactform></app-contactform>
